started a new index.html and logic file

--- a/index.html
+++ b/index.html
@@ -4,246 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CSS Grid</title>
-    <link rel="stylesheet" href="css/main3.css">
-    <script>
-        function getRandomInt(min, max) {
-            min = Math.ceil(min);
-            max = Math.floor(max);
-            return Math.floor(Math.random() * (max - min)) + min; //The maximum is exclusive and the minimum is inclusive
-        }
-        function start() {
-
-            let resources = ["linear-gradient(240deg,rgb(252, 166, 7), rgb(255, 165, 0))","linear-gradient(240deg,rgb(252, 166, 7), rgb(255, 165, 0))","linear-gradient(240deg,rgb(252, 166, 7), rgb(255, 165, 0))","linear-gradient(240deg,rgb(252, 166, 7), rgb(255, 165, 0))", "yellow","yellow","yellow","yellow", "gray","gray","gray","gray", "linear-gradient(240deg, #eaee44, #90ec19)","linear-gradient(240deg, #eaee44, #90ec19)","linear-gradient(240deg, #eaee44, #90ec19)","linear-gradient(240deg, #eaee44, #90ec19)", "linear-gradient(240deg, #f8372a, #cc2900)","linear-gradient(240deg, #f8372a, #cc2900)","linear-gradient(240deg, #f8372a, #cc2900)","linear-gradient(240deg, #f8372a, #cc2900)", "rgb(194, 253, 253", "rgb(194, 253, 253", "rgb(194, 253, 253"];
-            for (let i = 1; i < 24; i++) { 
-
-                let resource = resources.splice(Math.floor(Math.random()*resources.length), 1);
-                tile = "tile" + i
-                console.log(tile);
-                document.getElementById(tile).innerHTML =  getRandomInt(2, 13);
-                document.getElementById(tile).style.background = resource;
-            }
-            
-        }
-        function roll() {
-            document.getElementById("dice1").innerHTML =  getRandomInt(1, 7);
-            document.getElementById("dice2").innerHTML =  getRandomInt(1, 7);
-        }
-        function placeHouse(id) {
-            document.getElementById(id).style.background = "red";
-            document.getElementById(id).style.opacity = 1;
-            console.log(id);
-        }
-        function placeRoad(id) {
-            document.getElementById(id).style.background = "red";
-            document.getElementById(id).style.opacity = 1;
-            console.log(id);
-        }
-
-
-        function addArmy(id) {
-            let dot = document.createElement("SPAN");
-
-            dot.style.background = "red";
-            dot.style.opacity = 1;
-            dot.style.height= "10px";
-            dot.style.width= "10px";
-            document.getElementById(id).appendChild(dot);
-            console.log(id);
-        }
-        </script>
+    <title>Document</title>
 </head>
+<script src="logic.js"></script>
 <body>
-
-    <div class="basegrid">
-            <nav class="navbar">NAVBAR</nav>
-        <div class="board">
-
-
-                    <div class="road road1" onclick="placeRoad(this.id)" id="road1">r1</div>
-                    <div class="road road2"onclick="placeRoad(this.id)" id="road2">r2</div>
-                    <div class="road road3" onclick="placeRoad(this.id)" id="road3">r3</div>
-                    <div class="road road4" onclick="placeRoad(this.id)" id="road4">r4</div>
-                    <div class="road road5" onclick="placeRoad(this.id)" id="road5">r5</div>
-                    <div class="road road6" onclick="placeRoad(this.id)" id="road6">r6</div>
-                    <div class="road road7" onclick="placeRoad(this.id)" id="road7">r7</div>
-                    <div class="road road8" onclick="placeRoad(this.id)" id="road8">r8</div>
-                    <div class="road road9" onclick="placeRoad(this.id)" id="road9">r9</div>
-                    <div class="road road10" onclick="placeRoad(this.id)" id="road10">r10</div>
-                    <div class="road road11" onclick="placeRoad(this.id)" id="road11">r11</div>
-                    <div class="tile tile1" id="tile1" onclick="addArmy(this.id)">Tile 1</div>
-                    <div class="road road12" onclick="placeRoad(this.id)" id="road12">r12</div>
-                    <div class="tile tile2" id="tile2">Tile 2</div>
-                    <div class="road road13" onclick="placeRoad(this.id)" id="road13">r13</div>
-                    <div class="tile tile3" id="tile3">Tile 3</div>
-                    <div class="road road14" onclick="placeRoad(this.id)" id="road14">r14</div>
-                    <div class="tile tile4" id="tile4">Tile 4</div>
-                    <div class="road road15">r15</div>
-                    <div class="tile tile5" id="tile5">Tile 5</div>
-                    <div class="road road16">r16</div>
-                    <div class="road road17">r17</div>
-                    <div class="road road18">r18</div>
-                    <div class="road road19">r19</div>
-                    <div class="road road20">r20</div>
-                    <div class="road road21">r21</div>
-                    <div class="road road22">r22</div>
-                    <div class="road road23">r23</div>
-                    <div class="house house18" >h18</div>
-                    <div class="road road24">r24</div>
-                    <div class="road road25">r25</div>
-                    <div class="road road26">r26</div>
-                    <div class="road road27">r27</div>
-                    <div class="tile tile6" id="tile6">Tile 6</div>
-                    <div class="road road28">r28</div>
-                    <div class="tile tile7" id="tile7">Tile 7</div>
-                    <div class="road road29">r29</div>
-                    <div class="tile tile8" id="tile8">Tile 8</div>
-                    <div class="tile tile9" id="tile9">Tile 9</div>
-                    <div class="road road30">r30</div>
-                    <div class="road road31">r31</div>
-                    <div class="road road32">r32</div>
-                    <div class="road road33">r33</div>
-                    <div class="road road34">r34</div>
-                    <div class="road road35">r35</div>
-                    <div class="road road36">r36</div>
-                    <div class="road road37">r37</div>
-                    <div class="road road38">r38</div>
-                    <div class="road road39">r39</div>
-                    <div class="road road40">40</div>
-                    <div class="road road41">r41</div>
-                    <div class="road road42">r42</div>
-                    <div class="road road43">r43</div>
-                    <div class="road road44">r44</div>
-                    <div class="road road45">r45</div>
-                    <div class="road road46">r46</div>
-                    <div class="road road47">r47</div>
-                    <div class="road road48">r48</div>
-                    <div class="road road49">r49</div>
-                    <div class="road road50">r50</div>
-                    <div class="road road51">r51</div>
-                    <div class="road road52">r52</div>
-                    <div class="road road53">r53</div>
-                    <div class="road road54">r54</div>
-                    <div class="road road55">r55</div>
-                    <div class="road road56">r56</div>
-                    <div class="road road57">r57</div>
-                    <div class="road road58">r58</div>
-                    <div class="road road59">r59</div>
-                    <div class="road road60">r60</div>
-                    <div class="road road61">r61</div>
-                    <div class="road road62">r62</div>
-                    <div class="road road63">r63</div>
-                    <div class="road road64">r64</div>
-                    <div class="road road65">r65</div>
-                    <div class="road road66">r66</div>
-                    <div class="road road67">r67</div>
-                    <div class="road road68">r68</div>
-                    <div class="road road69">r69</div>
-                    <div class="road road70">r70</div>
-                    <div class="road road71">r71</div>
-                    <div class="road road72">r72</div>
-                    <div class="road road73">r73</div>
-                    <div class="road road74">r74</div>
-                    <div class="road road75">r75</div>
-                    <div class="road road76">r76</div>
-                    <div class="road road77">r77</div>
-                    <div class="road road78">r78</div>
-                    <div class="road road79">r79</div>
-                    <div class="road road80">r80</div>
-                    <div class="road road81">r81</div>
-                    <div class="road road82">r82</div>
-                    <div class="road road83">r83</div>
-                    <div class="road road84">r84</div>
-                    <div class="road road85">r85</div>
-                    <div class="road road86">r86</div>
-                    <div class="road road87">r87</div>
-                    <div class="road road88">r88</div>
-                    <div class="tile tile10" id="tile10">Tile 10</div>
-                    <div class="tile tile11" id="tile11">Tile 11</div>
-                    <div class="tile tile12" id="tile12">Tile 12</div>
-                    <div class="tile tile13" id="tile13">Tile 13</div>
-                    <div class="tile tile14" id="tile14">Tile 14</div>
-                    <div class="tile tile15" id="tile15">Tile 15</div>
-                    <div class="tile tile16" id="tile16">Tile 16</div>
-                    <div class="tile tile17" id="tile17">Tile 17</div>
-                    <div class="tile tile18" id="tile18">Tile 18</div>
-                    <div class="tile tile19" id="tile19">Tile 19</div>
-                    <div class="tile tile20" id="tile20">Tile 20</div>
-                    <div class="tile tile21" id="tile21">Tile 21</div>
-                    <div class="tile tile22" id="tile22">Tile 22</div>
-                    <div class="tile tile23" id="tile23">Tile 23</div>
-                    <div class="house house1" onclick="placeHouse(this.id)" id="house1">h1</div>
-                    <div class="house house2" onclick="placeHouse(this.id)" id="house2">h2</div>
-                    <div class="house house3" onclick="placeHouse(this.id)" id="house3">h3</div>
-                    <div class="house house4" onclick="placeHouse(this.id)" id="house4">h4</div>
-                    <div class="house house5" onclick="placeHouse(this.id)" id="house5">h5</div>
-                    <div class="house house6" onclick="placeHouse(this.id)" id="house6">h6</div>
-                    <div class="house house7" onclick="placeHouse(this.id)" id="house7">h7</div>
-                    <div class="house house8" onclick="placeHouse(this.id)" id="house8">h8</div>
-                    <div class="house house9" onclick="placeHouse(this.id)" id="house9">h9</div>
-                    <div class="house house10" onclick="placeHouse(this.id)" id="house10">h10</div>
-                    <div class="house house11" onclick="placeHouse(this.id)" id="house11">h11</div>
-                    <div class="house house12" onclick="placeHouse(this.id)" id="house12">h12</div>
-                    <div class="house house13" onclick="placeHouse(this.id)" id="house13">h13</div>
-                    <div class="house house14" onclick="placeHouse(this.id)" id="house14">h14</div>
-                    <div class="house house15" onclick="placeHouse(this.id)" id="house15">h15</div>
-                    <div class="house house16" onclick="placeHouse(this.id)" id="house16">h16</div>
-                    <div class="house house17" onclick="placeHouse(this.id)" id="house17">h17</div>
-                    <div class="house house18" onclick="placeHouse(this.id)" id="house18">h18</div>
-                    <div class="house house19" onclick="placeHouse(this.id)" id="house19">h19</div>
-                    <div class="house house20" onclick="placeHouse(this.id)" id="house20">h20</div>
-                    <div class="house house21" onclick="placeHouse(this.id)" id="house21">h21</div>
-                    <div class="house house22" onclick="placeHouse(this.id)" id="house22">h22</div>
-                    <div class="house house23" onclick="placeHouse(this.id)" id="house23">h23</div> 
-                    <div class="house house24" onclick="placeHouse(this.id)" id="house24">h24</div> 
-                    <div class="house house25" onclick="placeHouse(this.id)" id="house25">h25</div> 
-                    <div class="house house26" onclick="placeHouse(this.id)" id="house26">h26</div> 
-                    <div class="house house27" onclick="placeHouse(this.id)" id="house27">h27</div> 
-                    <div class="house house28" onclick="placeHouse(this.id)" id="house28">h28</div> 
-                    <div class="house house29" onclick="placeHouse(this.id)" id="house29">h29</div>
-                    <div class="house house30" onclick="placeHouse(this.id)" id="house30">h30</div>
-                    <div class="house house31" onclick="placeHouse(this.id)" id="house31">h31</div> 
-                    <div class="house house32" onclick="placeHouse(this.id)" id="house32">h32</div> 
-                    <div class="house house33" onclick="placeHouse(this.id)" id="house33">h33</div> 
-                    <div class="house house34" onclick="placeHouse(this.id)" id="house34">h34</div> 
-                    <div class="house house35" onclick="placeHouse(this.id)" id="house35">h35</div> 
-                    <div class="house house36" onclick="placeHouse(this.id)" id="house36">h36</div> 
-                    <div class="house house37" onclick="placeHouse(this.id)" id="house37">h37</div>
-                    <div class="house house38" onclick="placeHouse(this.id)" id="house38">h38</div>
-                    <div class="house house39" onclick="placeHouse(this.id)" id="house39">h39</div> 
-                    <div class="house house40" onclick="placeHouse(this.id)" id="house40">h40</div> 
-                    <div class="house house41" onclick="placeHouse(this.id)" id="house41">h41</div> 
-                    <div class="house house42" onclick="placeHouse(this.id)" id="house42">h42</div> 
-                    <div class="house house43" onclick="placeHouse(this.id)" id="house43">h43</div> 
-                    <div class="house house44" onclick="placeHouse(this.id)" id="house44">h44</div> 
-                    <div class="house house45" onclick="placeHouse(this.id)" id="house45">h45</div>
-                    <div class="house house46" onclick="placeHouse(this.id)" id="house46">h46</div>    
-                    <div class="house house47" onclick="placeHouse(this.id)" id="house47">h47</div>    
-                    <div class="house house48" onclick="placeHouse(this.id)" id="house48">h48</div>    
-                    <div class="house house49" onclick="placeHouse(this.id)" id="house49">h49</div>    
-                    <div class="house house50" onclick="placeHouse(this.id)" id="house50">h50</div>    
-                    <div class="house house51" onclick="placeHouse(this.id)" id="house51">h51</div>
-                    <div class="house house52" onclick="placeHouse(this.id)" id="house52">h52</div>
-                    <div class="house house53" onclick="placeHouse(this.id)" id="house53">h53</div>    
-                    <div class="house house54" onclick="placeHouse(this.id)" id="house54">h54</div>    
-                    <div class="house house55"onclick="placeHouse(this.id)" id="house55">h55</div>    
-                    <div class="house house56" onclick="placeHouse(this.id)" id="house56">h56</div>    
-                    <div class="house house57" onclick="placeHouse(this.id)" id="house57">h57</div>    
-                    <div class="house house58" onclick="placeHouse(this.id)" id="house58">h58</div>
-                    <div class="house house59" onclick="placeHouse(this.id)" id="house59">h59</div>    
-                    <div class="house house60" onclick="placeHouse(this.id)" id="house60">h60</div>    
-                    <div class="house house61" onclick="placeHouse(this.id)" id="house61">h61</div>    
-                    <div class="house house62" onclick="placeHouse(this.id)" id="house62">h62</div>    
-                    <div class="house house63" onclick="placeHouse(this.id)" id="house63">h63</div>    
-                    <div class="house house64" onclick="placeHouse(this.id)" id="house64">h64</div>
-                    <div class="house house65" onclick="placeHouse(this.id)" id="house65">h65</div>
-                    <div class="house house66" onclick="placeHouse(this.id)" id="house66">h66</div>
-                    <div class="port port1" id="port1">Port 1</div>
-                    <div class="port port2" id="port2">Port 2</div>         
-                    <div class="port port3" id="port3">Port 3</div>         
-                    <div class="port port4" id="port4">Port 4</div>                                        
-                </div>
-
-            </div>
+    <div>filler content</div>
 </body>
 </html>
