adeed a mock front end and styling

--- a/index.html
+++ b/index.html
@@ -5,9 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <script src="logic.js"></script>
 <body>
-    <div>filler content</div>
+    <div class="board card-panel amber lighten-5">
+        <div class="house1 card-panel teal lighten-2"></div>
+        <div class="house2 card-panel teal lighten-2"></div>
+        <div class="house3 card-panel teal lighten-2"></div>
+        <div class="house4 card-panel teal lighten-2"></div>
+        <div class="house5 card-panel teal lighten-2"></div>
+        <div class="house6 card-panel teal lighten-2"></div>
+        <div class="house7 card-panel teal lighten-2"></div>
+        <div class="house8 card-panel teal lighten-2"></div>
+        <div class="house9 card-panel teal lighten-2"></div>
+        <div class="house10 card-panel teal lighten-2"></div>
+        <div class="house11 card-panel teal lighten-2"></div>
+        <div class="house12 card-panel teal lighten-2"></div>
+        <div class="house13 card-panel teal lighten-2"></div>
+        <div class="tile1 card-panel deep-purple lighten-2" id="tile1"></div>
+        <div class="tile2 card-panel deep-purple lighten-2" id="tile2"></div>
+        <div class="tile3 card-panel deep-purple lighten-2" id="tile3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+        <div class="card-panel teal lighten-3"></div>
+
+    </div>
 </body>
 </html>
