added functions to roll and collect resources

--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@
 <script src="logic.js"></script>
 <body>
     <div class="board card-panel amber lighten-5">
-        <div class="house1 card-panel teal lighten-2"></div>
-        <div class="house2 card-panel teal lighten-2"></div>
-        <div class="house3 card-panel teal lighten-2"></div>
-        <div class="house4 card-panel teal lighten-2"></div>
-        <div class="house5 card-panel teal lighten-2"></div>
-        <div class="house6 card-panel teal lighten-2"></div>
-        <div class="house7 card-panel teal lighten-2"></div>
-        <div class="house8 card-panel teal lighten-2"></div>
-        <div class="house9 card-panel teal lighten-2"></div>
-        <div class="house10 card-panel teal lighten-2"></div>
-        <div class="house11 card-panel teal lighten-2"></div>
-        <div class="house12 card-panel teal lighten-2"></div>
-        <div class="house13 card-panel teal lighten-2"></div>
-        <div class="tile1 card-panel deep-purple lighten-2" id="tile1"></div>
-        <div class="tile2 card-panel deep-purple lighten-2" id="tile2"></div>
-        <div class="tile3 card-panel deep-purple lighten-2" id="tile3"></div>
+        <div class="house1 card-panel lighten-2" id="house1"></div>
+        <div class="house2 card-panel lighten-2" id="house2"></div>
+        <div class="house3 card-panel lighten-2" id="house3"></div>
+        <div class="house4 card-panel lighten-2" id="house4"></div>
+        <div class="house5 card-panel lighten-2" id="house5"></div>
+        <div class="house6 card-panel lighten-2" id="house6"></div>
+        <div class="house7 card-panel lighten-2" id="house7"></div>
+        <div class="house8 card-panel lighten-2" id="house8"></div>
+        <div class="house9 card-panel lighten-2" id="house9"></div>
+        <div class="house10 card-panel lighten-2" id="house10"></div>
+        <div class="house11 card-panel lighten-2" id="house11"></div>
+        <div class="house12 card-panel lighten-2" id="house12"></div>
+        <div class="house13 card-panel lighten-2" id="house13"></div>
+        <div class="house14 card-panel lighten-2" id="house14"></div>
+        <div class="house15 card-panel lighten-2" id="house15"></div>
+        <div class="tile1 tile card-panel deep-purple lighten-2" id="tile1"></div>
+        <div class="tile2 tile card-panel deep-purple lighten-2" id="tile2"></div>
+        <div class="tile3 tile card-panel deep-purple lighten-2" id="tile3"></div>
+        <div class="tile4 tile card-panel deep-purple lighten-2" id="tile4"></div>
+        <div class="tile5 tile card-panel deep-purple lighten-2" id="tile5"></div>
         <div class="card-panel teal lighten-3"></div>
         <div class="card-panel teal lighten-3"></div>
         <div class="card-panel teal lighten-3"></div>
