started player menus

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 </head>
 <script src="logic.js"></script>
 <body>
+    <div class="menu card-panel amber lighten-5">
+        <div class="playerOne-menu orange lighten-3 white-text">
+            <div class="title orange lighten-3">Player One</div>
+            <div class="resource-card card red darken-1 white-text">Brick</div>
+            <div class="resource-card card green darken-1 white-text">Wood</div>
+            <div class="resource-card card yellow darken-1 white-text">Livestock</div>
+            <button class="btn orange lighten-2">Place House</button>
+            <button class="btn red">End Turn</button>
+        </div>
+        <div class="playerOne-menu pink lighten-3 hide">
+            <div class="title pink lighten-3">Player Two </div>
+            <button class="btn pink lighten-2">Place House</button>
+        </div>
+    </div>
     <div class="board card-panel amber lighten-5">
         <div class="house1 card-panel lighten-2" id="house1"></div>
         <div class="house2 card-panel lighten-2" id="house2"></div>
