finished the house divs and added a hidden class

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <div class="house13 house card-panel lighten-2" id="house13"></div>
         <div class="house14 house card-panel lighten-2" id="house14"></div>
         <div class="house15 house card-panel lighten-2" id="house15"></div>
+        <div class="house15 house card-panel lighten-2" id="house16"></div>
         <div class="tile1 tile card-panel deep-purple lighten-2" id="tile1"></div>
         <div class="tile2 tile card-panel deep-purple lighten-2" id="tile2"></div>
         <div class="tile3 tile card-panel deep-purple lighten-2" id="tile3"></div>
